exports[`test passes false to Modal when not visible 1`] = `
<View>
  <Modal
    animationType="fade"
    onRequestClose={[Function]}
    transparent={true}
    visible={false}>
    <View
      style={undefined}>
      <ScrollView
        contentContainerStyle={undefined}
        style={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              Array [
                undefined,
              ],
            ]
          }>
          Please Choose Workflow
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              undefined,
              Array [
                undefined,
              ],
            ]
          }>
          FOR MOBILE
        </Text>
        <View
          style={undefined}>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Mobile 1
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Mobile 2
            </Text>
          </TouchableOpacity>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              undefined,
              Array [
                undefined,
              ],
            ]
          }>
          OTHER WORKFLOWS
        </Text>
        <View
          style={undefined}>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Non 1
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Non 2
            </Text>
          </TouchableOpacity>
        </View>
        <TouchableOpacity
          activeOpacity={0.5}
          disabled={false}
          onPress={[Function]}
          style={
            Array [
              Array [
                undefined,
                undefined,
              ],
              Array [
                undefined,
              ],
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={undefined}>
            Cancel
          </Text>
        </TouchableOpacity>
      </ScrollView>
    </View>
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      style={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "FontAwesome",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }>
        
      </Text>
    </TouchableOpacity>
  </Modal>
</View>
`;

exports[`test renders correctly when visible 1`] = `
<View>
  <Modal
    animationType="fade"
    onRequestClose={[Function]}
    transparent={true}
    visible={true}>
    <View
      style={undefined}>
      <ScrollView
        contentContainerStyle={undefined}
        style={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              Array [
                undefined,
              ],
            ]
          }>
          Please Choose Workflow
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              undefined,
              Array [
                undefined,
              ],
            ]
          }>
          FOR MOBILE
        </Text>
        <View
          style={undefined}>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Mobile 1
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Mobile 2
            </Text>
          </TouchableOpacity>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              undefined,
              Array [
                undefined,
              ],
            ]
          }>
          OTHER WORKFLOWS
        </Text>
        <View
          style={undefined}>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Non 1
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Array [
                undefined,
                Array [
                  undefined,
                ],
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  undefined,
                  Array [
                    undefined,
                  ],
                ]
              }>
              Non 2
            </Text>
          </TouchableOpacity>
        </View>
        <TouchableOpacity
          activeOpacity={0.5}
          disabled={false}
          onPress={[Function]}
          style={
            Array [
              Array [
                undefined,
                undefined,
              ],
              Array [
                undefined,
              ],
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={undefined}>
            Cancel
          </Text>
        </TouchableOpacity>
      </ScrollView>
    </View>
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      style={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "FontAwesome",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }>
        
      </Text>
    </TouchableOpacity>
  </Modal>
</View>
`;
